<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.bakingapp.RecipeDetailsActivity">

        <fragment
            android:id="@+id/steps_list_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.example.android.bakingapp.RecipeStepsFragment"/>

    </FrameLayout>
