<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.bakingapp.MainActivity"
        >

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_recipe_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/empty_recipes_view"
            android:visibility="invisible"
            android:layout_gravity="center">
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/fab_refresh"
                android:src="@drawable/ic_refresh_black_24px"
                android:tint="@color/white"
                android:background="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_error_internet"
                android:layout_gravity="center"
                android:padding="@dimen/default_spacing"/>
        </LinearLayout>

            <ProgressBar
                android:layout_width="@dimen/progressbar_size"
                android:layout_height="@dimen/progressbar_size"
                android:layout_gravity="center"
                android:id="@+id/loading_indicator"
                android:visibility="invisible"/>



    </FrameLayout>
</layout>